Closed Bug 878590 Opened 12 years ago Closed 12 years ago

HTML5 datalist is not conveyed by haspopup property

Categories

(Core :: Disability Access APIs, defect)

x86_64
Windows 8
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla24

People

(Reporter: faulkner.steve, Assigned: surkov)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

when an input with an associated datalist has focus would expect haspopup property to be exposed on the input to indicate the presence of the datalist, this is not the case. test case: http://rawgithub.com/stevefaulkner/HTML5accessibility/master/tests/datalist.html MSAA accName;datalist; accRole;editable text; accState; focusable , focused; accDescription;; accDefaultAction;activate; accValue;h; accParent;datalist; IAccessible2 Name;datalist; Role;editable text; States;Editable, Opaque, Selectable text, Single line, Supports autocompletion; Description; Relations 0 Relation Type;labelledBy; Relation Targets 0;datalist - Label; Object Attributes margin-left;0px; text-align;start; text-indent;0px; id;url1; tag;input; margin-right;0px; margin-top;0px; margin-bottom;0px; display;inline; line-number;1; explicit-name;true; Value;h; UIAutomation CurrentAriaProperties;; CurrentAriaRole;(none); CurrentControlType;UIA_Edit; CurrentHasKeyboardFocus;True; CurrentName;datalist; CurrentOrientation;None; CurrentControllerFor CurrentDescribedBy CurrentFlowsTo CurrentLabeledBy CurrentLiveSetting;0;
Blocks: html5a11y
Attached patch patchSplinter Review
Assignee: nobody → surkov.alexander
Status: NEW → ASSIGNED
Attachment #757206 - Flags: review?(trev.saunders)
Attachment #757206 - Flags: review?(trev.saunders) → review+
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla24
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: