Bug 878590 - HTML5 datalist is not conveyed by haspopup property, r=tbsaunde